--- a/Manfaat Koki/manfaatkoki.html
+++ b/Manfaat Koki/manfaatkoki.html
@@ -22,7 +22,7 @@
             <p>Kepala Balai Besar Pengujian Penerapan Produk Kelautan dan Perikanan (BBP3KP), Widya Rusyanto mengungkapkan ikan ini memiliki corak warna terang dan memiliki bentuk unik serta cantik, sehingga mampu membuat orang betah berlama-lama memandangnya.</p>
             <p>Merujuk hasil penelitian Environment and Behavior yang dikutip dari Nyoman Suarna, melihat ikan berenang di akuarium atau kolam selama sepuluh menit dapat menurunkan tekanan darah dan denyut jantung. Selain itu, manfaat lain melihat ikan berenang di akuarium bisa mengurangi stres akibat terlalu lama berada dalam rumah untuk menerapkan social ataupun physical distancing.</p>
             <p class="makanan">Apa Makanan Ikan Koki?</p class="makanan">
-            <p class="jawaban">Makanan Ikan Koki adalah Pelet Ikan.</p>
+            <p class="jawaban">Makanan Ikan Koki adalah pelet ikan.</p>
             <p class="ikan">Ini adalah pelajaranku pada sesi-1 Web Development</p>
         </article>
         <footer>
